Omnibox: Improve HQP Scoring for Terms that Start with Punctuation

Properly calculate match locations for various inputs, e.g.,
"://ww" should count as a hostname match because that's where
the main word part starts.

BUG=651654

Review-Url: https://chromiumcodereview.appspot.com/2421373003
Cr-Commit-Position: refs/heads/master@{#426252}

Former-commit-id: 1ca732414effb6ee392b4e49a02892111783a2e3